lintian-brush (0.56) UNRELEASED; urgency=medium

  * Attempt to keep preferred order of fields in YAML files.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 06 Jan 2020 22:25:11 +0000

lintian-brush (0.55) unstable; urgency=medium

  * Fix verification of Bug-Submit URLs for github.com.
  * Fix handling of non-default encodings in debian/patches.
  * Use dh $@ sequencer.
  * Change the commit message style so the footer is short, human-readable
    and parseable. Closes: #946803

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 06 Jan 2020 13:46:10 +0000

lintian-brush (0.54) unstable; urgency=medium

  * Fix accidental removal of dh overrides with just conditions.
  * Disable the skip-systemd-native-flag-missing-pre-depends fixer for now,
    since it is too naive.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 03 Jan 2020 17:43:21 +0000

lintian-brush (0.53) unstable; urgency=medium

  [ Jelmer Vernooĳ ]
  * Be a bit quieter when unable to contact udd.
  * Filter out duplicate lines in the last last changelog entry.
  * Add manpage for guess-upstream-metadata(1).
  * Cope with non-UTF8 R DESCRIPTION files.
  * Only mention whether changelog will be updated once per run.

  [ Topi Miettinen ]
  * Add fixer and test for systemd-service-file-shutdown-problems.

  [ Jelmer Vernooĳ ]
  * Refactor systemd support.
  * Add fixer for systemd-service-alias-without-extension.
  * Add fixer for systemd-service-file-refers-to-obsolete-bindto.
  * Add fixer for systemd-service-file-refers-to-obsolete-target.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 01 Jan 2020 21:10:22 +0000

lintian-brush (0.52) unstable; urgency=medium

  * Fix regression recognizing versioned common license files.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 30 Dec 2019 02:19:37 +0000

lintian-brush (0.51) unstable; urgency=medium

  * Add fixers for:
     copyright-refers-to-symlink-license,
     copyright-refers-to-versionless-license-file.
  * Add fixers for: