@@ -1,3 +1,0 @@
-Set upstream metadata fields: Name.
-Certainty: certain
-Fixed-Lintian-Tags: upstream-metadata-file-is-missing
