@@ -1,9 +1,0 @@
-name                = IO-Blah-Blah
-author              = Somebody <somebody@example.com>
-license             = Perl_5
-
-[@Author::ETHER]
-:version = 0.097
-
-[Prereqs]
-perl = 5.008
